# lazyfoo

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  texture.cpp  texture.hpp
cmake/: FindSDL2_image.cmake
